--- a/index.html
+++ b/index.html
@@ -231,6 +231,16 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
+
+  <!--Комментарий поста-->
+  <template id="comment">
+    <ul class="social__comments">
+      <li class="social__comment">
+        <img class="social__picture" src="" alt="" width="35" height="35">
+        <p class="social__text"></p>
+      </li>
+    </ul>
+  </template>
   <script src="js/main.js" type="module"></script>
 </body>
 </html>
