Загружает данные с сервера

--- a/index.html
+++ b/index.html
@@ -228,12 +228,28 @@
     </section>
   </template>
 
+  <!-- Сообщение об успешной загрузке изображения -->
+  <template id="error-message">
+    <div class="error-message">
+        <h2 class="success__title">Данные не загрузились. Попробуйте обновить страницу.</h2>
+    </div>
+  </template>
+
   <!-- Экран загрузки изображения -->
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 
   <!--Комментарий поста-->
+  <template id="comment">
+    <ul class="social__comments">
+      <li class="social__comment">
+        <img class="social__picture" src="" alt="" width="35" height="35">
+        <p class="social__text"></p>
+      </li>
+    </ul>
+  </template>
+  <!--Сообщение об ошибке отправки формы-->
   <template id="comment">
     <ul class="social__comments">
       <li class="social__comment">
